--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,60 +1,85 @@
-header{
+header {
+    position: relative;
 
-
-    .logo{
+    .logo {
         font-weight: 600;
         font-size: 26px;
     }
-    
 
-    .nav{
+    .nav {
         float: right;
         list-style: none;
 
-        li{
+        li {
             display: inline;
             margin-left: 25px;
             cursor: pointer;
             font-size: 15px;
             font-weight: 600;
             transition: opacity 500ms ease;
-        }
 
-        li:hover{
-            opacity: 0.5;
+            &:hover {
+                opacity: 0.5;
+            }
         }
     }
 
-    .presentation{
-        margin:50px 0;
+    .shopCartButton {
+        float: right;
+        cursor: pointer;
+        font-size: 20px;
+        transition: color,transform 500ms ease;
+
+
+        &:hover,
+        &.active {
+            color: rgb(255, 0, 0) !important;
+            transform:scale(1.5);
+        }
+    }
+
+    .shopCart {
+        position: absolute;
+        top: 30px;
+        right: 0;
+        width: 450px;
+        min-height: 100px;
+        background: #258bad;
+        -webkit-box-shadow: -20px 20px 22px 12px rgba(7, 7, 7, 0.23);
+        -moz-box-shadow: -20px 20px 22px 12px rgba(7, 7, 7, 0.23);
+        box-shadow: -20px 20px 22px 12px rgba(7, 7, 7, 0.23);
+        z-index: 1000;
+        }
+    }
+
+    .presentation {
+        margin: 50px 0;
         background: url(./../../assets/banner.jpg) no-repeat;
         width: 100%;
         height: 500px;
         background-size: cover;
         background-position: center center;
-        // background-blend-mode: multiply;
-        // background-color: #353535;
         position: relative;
         border-radius: 15px;
+
+        &::after {
+            content: 'Лучшая электроника для вашей семьи';
+            color: antiquewhite;
+            position: absolute;
+            top: 100px;
+            left: 50px;
+            width: 370px;
+            font-size: 40px;
+        }
+
+        &::before {
+            content: 'по низкой цене';
+            color: antiquewhite;
+            position: absolute;
+            top: 260px;
+            left: 50px;
+            width: 350px;
+            font-size: 35px;
+        }
     }
 
-    .presentation::after{
-        content: 'Лучшая электроника для вашей семьи';
-        color: antiquewhite;
-        position: absolute;
-        top: 100px;
-        left:50px;
-        width: 370px;
-        font-size: 40px;
-    }
-
-    .presentation::before{
-        content: 'по низкой цене';
-        color: antiquewhite;
-        position: absolute;
-        top: 260px;
-        left:50px;
-        width: 350px;
-        font-size: 35px;
-    }
-}
